fixed background zoom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,13 @@ nav a:hover {
         height: 100vh;
         min-height: 350px;
     }
+
+    .bgimg-1,
+    .bgimg-2,
+    .bgimg-3,
+    .bgimg-4 {
+        background-attachment: scroll;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
